--- a/package.json
+++ b/package.json
@@ -58,5 +58,5 @@
   "devDependencies": {
     "gh-pages": "^3.2.3"
   },
-  "homepage": "https://ducviettiendoan.github.io/nasa-scrapping/"
+  "homepage": "https://github.com/AtypicalAsian/astro-deck-astr100"
 }
