made changes to deploy

--- a/package.json
+++ b/package.json
@@ -58,5 +58,5 @@
   "devDependencies": {
     "gh-pages": "^3.2.3"
   },
-  "homepage": "https://atypicalasian.github.io/astro-deck-astr100"
+  "homepage": "https://atypicalasian.github.io/astro-deck-astr100/"
 }
